data/all_generated_tests/raw_wast_tests/br_UnreachableCodeExecution_306.wast
;; 7. **Test Description:**    - Utilize `loop` with proper block alignment, but with a `br` instruction depth improperly calculated due to missing entry operand, leading to `unreachable`.    - **Constraint: Operand Stack Unwinding**    - **Differential Behavior: The Wizard Engine should check and correct the depth, but WebAssembly might cause `unreachable` execution from stack mismanagement.**

(assert_invalid
  (module
    (func $misaligned-loop-depth
      (loop $loop1
        (block $block1
          (br 0 (i32.const 1))
        )
      )
    )
  )
  "unreachable"
)